--- a/Menu.html
+++ b/Menu.html
@@ -1,1 +1,23 @@
-
+<html>
+<head>
+  <script>
+         var m=Documenet.getElementById("bgm");
+         m.play()
+  </script>
+  <style>
+    body{
+         background-image://xx.jpg;
+    }</style>
+  <head/>
+  <body>
+    <div>Start</div>
+    <div>Practice mode</div>
+    <div>Extra Start</div>
+    <div>Music room</div>
+    <div>Settings</div>
+    <div>About></div>
+    <div>More games</div>
+    <div>Quit</div>
+    <audio id="bgm" display="none" src="//xxx.mp3"></audio>
+  </body>
+</html>
