添加了player的class构造器

--- a/level.html
+++ b/level.html
@@ -9,7 +9,8 @@
         
       </div>
       <script>
-      <!--初始化变量-->
+      //初始化变量----
+
       var boss.heatth=50000
       //声明主角的生命值
       var boli.health=3
@@ -27,7 +28,7 @@
       }
       if（boss.died){
                   boss.say("这，怎么可能！")
-                  system.print("进入下一关")
+                  alert("进入下一关")
       }
         //如果主角受伤就扣除一条生命
       if(heart){
